<resources>
    <string name="app_name">LvivBikeMap</string>
    <string name="title_activity_map">Map</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_build_route">Build route</string>
    <string name="menu_events">Events</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="menu_about_info">About info</string>
    <string name="menu_add_marker">Add new marker</string>
    <string name="menu_feed">News feed</string>
    <string name="filter_bike_rental">Bike rental</string>
    <string name="filter_public_bike_sharing">Public bike sharing</string>
    <string name="filter_bike_repair">Bike repair</string>
    <string name="filter_useful_stops">Useful stops</string>
    <string name="filter_places_of_interest">Places of interest</string>
    <string name="filter_bicycle_path">Bicycle path</string>
    <string name="filter_bike_parking">Bike parking</string>
    <string name="full_name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="comment_hint">feedback</string>
    <string name="btn_send_feedback_text">send</string>
    <string name="feedback_send_successfuly">feedback sent successfully</string>
    <string name="feedback_send_error">Error when sending feedback</string>
    <string name="valid_email_error">enter valid email</string>
    <string name="valid_name_error">enter your name</string>
    <string name="valid_comment_error">enter feedback</string>
    <string name="points_load_successfuly">points load successfuly</string>
    <string name="points_load_error">points load error</string>
    <string name="facebook_label">facebook</string>
    <string name="facebook_link">https://www.facebook.com/comfycity.lviv/</string>
    <string name="email_label">email us</string>
    <string name="email_link">comfycity@ukr.net</string>
    <string name="btn_submit_filters">Submit</string>
</resources>
