<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/bikeRentalCb"
        android:text="@string/filter_bike_rental"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/publicBikeSharingCb"
        android:text="@string/filter_public_bike_sharing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/bikeRepairCb"
        android:text="@string/filter_bike_repair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/usefulStopsCb"
        android:text="@string/filter_useful_stops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/placesOfInterestCb"
        android:text="@string/filter_places_of_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/bicyclePathCb"
        android:text="@string/filter_bicycle_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/bikeParkingCb"
        android:text="@string/filter_bike_parking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>