<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/full_name_hint"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFullName"
        android:layout_margin="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_margin="20dp"
        android:hint="@string/comment_hint"/>

    <Button
        android:id="@+id/btnSendFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_send_feedback_text"/>

</RelativeLayout>