<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="32dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_facebook_link"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="0dp">

            <ImageView
                android:id="@+id/iv_facebook"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_facebook"/>

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/iv_facebook"
                android:background="@color/md_white_1000"/>

            <TextView
                android:id="@+id/tv_login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/iv_facebook"
                android:text="@string/facebook_label"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_email_container"
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_email"/>

            <View
                android:layout_width="0.1dp"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/iv_google"
                android:background="@color/md_white_1000"/>

            <TextView
                android:id="@+id/tv_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/iv_google"
                android:text="@string/email_label"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24dp"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>